--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="white">#fff</color>
     <color name="black">#000</color>
+    <color name="orange">#FFA500</color>
+    <color name="grey">#D3D3D3</color>
 </resources>
